fixtures/go/test_double/should_fail/runtime_test_support_import.go
package application

import "github.com/stretchr/testify/mock"

type RuntimeRepo struct {
	mock.Mock
}
